Fix bug with thumbnail overlays not showing up with jquery.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -25,7 +25,9 @@
 
 .project-thumbnails {
   position: relative;
-  margin-top: 20px;
+  margin-top: 40px;
+  height: 250px;
+  overflow: hidden;
 }
 
 .thumbnail {
@@ -38,10 +40,10 @@
   left: 40px;
   width: 300px;
   max-width: 100%;
+  opacity: 0;
   height: 100%;
   background: rgba(0, 0, 0, 0.85);
   z-index: 1;
-  display: none;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -49,18 +51,17 @@
 }
 
 .overlay-text {
-  position: absolute;
+  position: relative;
   color: #fff;
   top: 120px;
   left: 0;
   right: 0;
   margin: 0 auto;
-  z-index: 10;
   font-size: 15px;
+  z-index: 1;
+  padding: 0;
 }
 
-.project-thumbnails:hover {
-  .thumbnail-overlay {
-    display: block;
-  }
+.thumbnail-show {
+  opacity: 1;
 }
